--- a/src/apps/data-tagging/components/terminal/terminal.component.html
+++ b/src/apps/data-tagging/components/terminal/terminal.component.html
@@ -1,8 +1,10 @@
 <div class="terminal">
-  <pre>ng generate component xyz</pre>
-  <pre>ng add @angular/material</pre>
-  <pre>ng add @angular/pwa</pre>
-  <pre>ng add _____</pre>
-  <pre>ng test</pre>
-  <pre>ng build</pre>
+  <div class="content">
+    <pre>ng generate component xyz</pre>
+    <pre>ng add @angular/material</pre>
+    <pre>ng add @angular/pwa</pre>
+    <pre>ng add _____</pre>
+    <pre>ng test</pre>
+    <pre>ng build</pre>
+  </div>
 </div>
