--- a/src/apps/data-tagging/components/terminal/terminal.component.scss
+++ b/src/apps/data-tagging/components/terminal/terminal.component.scss
@@ -1,7 +1,6 @@
 .terminal {
   position: relative;
   width: 100%;
-  height: 60px;
   border-radius: 6px;
   padding-top: 45px;
   overflow: hidden;
@@ -22,10 +21,16 @@
     text-indent: 4px;
   }
 
-  pre {
-    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
-    color: white;
-    padding: 0 1rem 1rem;
-    margin: 0;
+  .content {
+    width: 100%;
+    height: 60px;
+    overflow-y: auto;
+
+    pre {
+      font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+      color: white;
+      padding: 0 1rem 1rem;
+      margin: 0;
+    }
   }
 }
