--- a/src/apps/data-tagging/components/terminal/terminal.component.scss
+++ b/src/apps/data-tagging/components/terminal/terminal.component.scss
@@ -25,12 +25,11 @@
     width: 100%;
     height: 60px;
     overflow-y: auto;
+    padding: 10px;
 
     pre {
       font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
       color: white;
-      padding: 0 1rem 1rem;
-      margin: 0;
     }
   }
 }
