--- a/src/apps/data-tagging/styles.scss
+++ b/src/apps/data-tagging/styles.scss
@@ -22,3 +22,16 @@ a:hover {
 a:hover {
   color: #125699;
 }
+
+.control {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  input {
+    height: 40px;
+    border: 1px solid black;
+    padding: 0 10px;
+    outline: 0;
+  }
+}
