update products selector

--- a/src/apps/data-tagging/components/app/app.component.html
+++ b/src/apps/data-tagging/components/app/app.component.html
@@ -9,7 +9,7 @@
       content
     </div>
     <div class="menu">
-      <dt-item-selector></dt-item-selector>
+      <dt-product-selector></dt-product-selector>
     </div>
   </div>
 
