--- a/src/apps/data-tagging/components/app/app.component.scss
+++ b/src/apps/data-tagging/components/app/app.component.scss
@@ -1,14 +1,15 @@
 $menu-width: 400px;
-$content-min-width: 500px;
+$content-min-width: 600px;
 
 .data-tagging {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  min-width: 1300px;
+  min-width: $content-min-width + $menu-width;
 
   .header {
     height: 60px;
+    min-height: 60px;
     display: flex;
     align-items: center;
     background-color: #1976d2;
