--- a/src/apps/data-tagging/components/terminal/terminal.component.scss
+++ b/src/apps/data-tagging/components/terminal/terminal.component.scss
@@ -31,6 +31,7 @@
     pre {
       font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
       color: white;
+      margin: 5px 0;
     }
   }
 }
