settings and tagger dummy

--- a/src/apps/data-tagging/components/app/app.component.html
+++ b/src/apps/data-tagging/components/app/app.component.html
@@ -1,12 +1,15 @@
 <div class="data-tagging">
 
   <div class="header">
-    <span>Welcome to Data Tagging Demo</span>
+    <div class="welcome">Welcome to Data Tagging Demo</div>
+    <div class="settings">
+      <dt-settings></dt-settings>
+    </div>
   </div>
 
   <div class="main">
     <div class="content">
-      content
+      <dt-tagger></dt-tagger>
     </div>
     <div class="menu">
       <dt-product-selector></dt-product-selector>
