--- a/src/apps/data-tagging/styles.scss
+++ b/src/apps/data-tagging/styles.scss
@@ -33,5 +33,16 @@ a:hover {
     border: 1px solid black;
     padding: 0 10px;
     outline: 0;
+
+    &[type=checkbox] {
+      height: 20px;
+      width: 20px;
+    }
+  }
+
+  select {
+    outline: 0;
+    border: 1px solid black;
+    padding: 0 5px;
   }
 }
