display images and zoom level setting

--- a/src/apps/data-tagging/components/app/app.component.html
+++ b/src/apps/data-tagging/components/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="data-tagging">
 
   <div class="header">
-    <div class="welcome">Welcome to Data Tagging Demo</div>
+    <div class="welcome">Welcome to Data Tagging</div>
     <div class="settings">
       <dt-settings></dt-settings>
     </div>
