--- a/src/apps/data-tagging/components/spinner/spinner.component.html
+++ b/src/apps/data-tagging/components/spinner/spinner.component.html
@@ -1,3 +1,6 @@
-<div class="spinner">
+<div
+  class="spinner"
+  [class.overlay]="overlay"
+>
   <img src="/apps/data-tagging/assets/img/spinner.gif" />
 </div>
