--- a/src/apps/data-tagging/components/app/app.component.scss
+++ b/src/apps/data-tagging/components/app/app.component.scss
@@ -23,6 +23,7 @@ $content-min-width: 600px;
       display: flex;
       justify-content: center;
       align-items: center;
+      font-size: 16px;
     }
 
     .settings {
