--- a/src/apps/data-tagging/components/spinner/spinner.component.scss
+++ b/src/apps/data-tagging/components/spinner/spinner.component.scss
@@ -10,4 +10,15 @@
     width: 50px;
     height: 50px;
   }
+
+  &.overlay {
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(200, 200, 200, 0.5);
+    z-index: 10000;
+  }
 }
