--- a/src/apps/data-tagging/components/tagger/tagger.component.scss
+++ b/src/apps/data-tagging/components/tagger/tagger.component.scss
@@ -8,4 +8,24 @@
 .tagger {
   width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f1f2f3;
+  flex-direction: column;
+
+  .images {
+    width: 100%;
+    display: flex;
+    flex: 1;
+    overflow: hidden;
+  }
+
+  .controls {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
