--- a/src/apps/data-tagging/components/settings/settings.component.html
+++ b/src/apps/data-tagging/components/settings/settings.component.html
@@ -13,6 +13,8 @@
         <option value="3.0">300%</option>
         <option value="3.5">350%</option>
         <option value="4.0">400%</option>
+        <option value="4.5">450%</option>
+        <option value="5.0">500%</option>
       </select>
     </div>
   </div>
@@ -27,13 +29,6 @@
         <option value="2">2</option>
         <option value="3">3</option>
       </select>
-    </div>
-  </div>
-
-  <div class="setting">
-    <div class="label">Preview Before Submit</div>
-    <div class="control">
-      <input type="checkbox" />
     </div>
   </div>
 
