--- a/src/apps/data-tagging/components/tagger-image/tagger-image.component.scss
+++ b/src/apps/data-tagging/components/tagger-image/tagger-image.component.scss
@@ -6,17 +6,17 @@
 .tagger-image {
   display: flex;
   flex: 1 1 auto;
-  padding: 10px;
   justify-content: center;
   align-items: center;
   position: relative;
+  margin: 10px;
 
   .image-preview {
     position: absolute;
-    top: 10px;
+    top: 0;
     bottom: 50px;
-    left: 10px;
-    right: 10px;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,6 +25,21 @@
       max-width: 100%;
       max-height: 100%;
       object-fit: contain;
+      cursor: crosshair;
+    }
+  }
+
+  .zoom-area {
+    position: absolute;
+    border: 1px solid #fff;
+    z-index: 100;
+    background: #aaa;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    img {
+      position: absolute;
     }
   }
 
