ability to assign product for a marker

--- a/src/apps/data-tagging/components/tagger-image/tagger-image.component.html
+++ b/src/apps/data-tagging/components/tagger-image/tagger-image.component.html
@@ -61,6 +61,7 @@
         [imageOffsetHeight]="imageOffsetHeight"
         [imageNaturalWidth]="imageNaturalWidth"
         [imageNaturalHeight]="imageNaturalHeight"
+        (assignProduct)="onMarkerAssignProduct(marker)"
         (remove)="onMarkerRemove(marker)"
       ></dt-tagger-marker>
     </ng-container>
