--- a/src/apps/data-tagging/components/tagger/tagger.component.html
+++ b/src/apps/data-tagging/components/tagger/tagger.component.html
@@ -16,6 +16,7 @@
       (submitImage)="onSubmitImage(image)"
       (addMarker)="onAddMarker(image, $event)"
       (removeMarker)="onRemoveMarker(image, $event)"
+      (markerAssignProduct)="onMarkerAssignProduct(image, $event)"
     ></dt-tagger-image>
   </div>
   <div class="controls">
