--- a/src/apps/data-tagging/components/settings/settings.component.html
+++ b/src/apps/data-tagging/components/settings/settings.component.html
@@ -38,7 +38,11 @@
 
   <div class="setting">
     <button class="help-button">
-      <img class="help-icon" src="/apps/data-tagging/assets/img/help.png" />
+      <img
+        class="help-icon"
+        src="/apps/data-tagging/assets/img/help.png"
+        (click)="onHelpClick($event)"
+      />
     </button>
   </div>
 </div>
