--- a/src/apps/data-tagging/components/app/app.component.scss
+++ b/src/apps/data-tagging/components/app/app.component.scss
@@ -2,6 +2,7 @@ $menu-width: 400px;
 $content-min-width: 600px;
 
 .data-tagging {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -55,4 +56,55 @@ $content-min-width: 600px;
     width: 100%;
   }
 
+  .help-dialog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(128, 128, 128, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+
+    .content {
+      border: 2px solid #eee;
+      background: #fff;
+      width: 500px;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+
+      .messages {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+
+        .strong {
+          font-weight: 600;
+          font-size: 18px;
+        }
+
+        .shifted {
+          padding-left: 20px;
+        }
+
+        .space {
+          margin-top: 20px;
+        }
+      }
+
+      .actions {
+        width: 100%;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
 }
